upgraded to use CDK 1.3.3 and JChemPaint 3.0.1