@@ -1,6 +1,5 @@
-/*  $Revision: 9684 $ $Author: egonw $ $Date: 2007-12-28 23:35:34 +0200 (петък, 28 Декември 2007) $
- *
- *  Copyright (C) 1997-2007  Christoph Steinbeck <steinbeck@users.sourceforge.net>
+/* Copyright (C) 1997-2007  Christoph Steinbeck <steinbeck@users.sourceforge.net>
+ *                    2010  Egon Willighagen <egonw@users.sourceforge.net>
  *
  *  Contact: cdk-devel@lists.sourceforge.net
  *
@@ -30,14 +29,20 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.Hashtable;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 import java.util.StringTokenizer;
 
 import javax.vecmath.Point2d;
 import javax.vecmath.Point3d;
 
 import org.openscience.cdk.CDKConstants;
+import org.openscience.cdk.annotations.TestClass;
+import org.openscience.cdk.annotations.TestMethod;
 import org.openscience.cdk.config.IsotopeFactory;
 import org.openscience.cdk.exception.CDKException;
 import org.openscience.cdk.interfaces.IAtom;
@@ -51,21 +56,20 @@ import org.openscience.cdk.interfaces.IMolecule;
 import org.openscience.cdk.interfaces.IMoleculeSet;
 import org.openscience.cdk.interfaces.IPseudoAtom;
 import org.openscience.cdk.io.DefaultChemObjectReader;
-import org.openscience.cdk.io.IChemObjectReader;
 import org.openscience.cdk.io.formats.IResourceFormat;
 import org.openscience.cdk.io.formats.MDLV2000Format;
 import org.openscience.cdk.io.setting.BooleanIOSetting;
 import org.openscience.cdk.io.setting.IOSetting;
-import org.openscience.cdk.tools.LoggingTool;
+import org.openscience.cdk.tools.ILoggingTool;
+import org.openscience.cdk.tools.LoggingToolFactory;
 import org.openscience.cdk.tools.manipulator.AtomContainerManipulator;
 
 import ambit2.core.groups.ISGroup;
 import ambit2.core.groups.SuppleAtomContainer;
 
 /**
- * Supports SGroups.
- * Reads a molecule from an MDL MOL or SDF file {cdk.cite DAL92}. An SD files
- * is read into a ChemSequence of ChemModel's. Each ChemModel will contain one
+ * Reads a molecule from an MDL MOL or SDF file {@cdk.cite DAL92}. An SD files
+ * is read into a {@link IChemSequence} of {@link IChemModel}'s. Each IChemModel will contain one
  * Molecule.
  *
  * <p>From the Atom block it reads atomic coordinates, element types and
@@ -81,33 +85,39 @@ import ambit2.core.groups.SuppleAtomContainer;
  *   molecule.getProperty(CDKConstants.TITLE);
  * </pre>
  *
- * RGroups which are saved in the mdl file as R#, are renamed according to their appearance,
+ * <p>RGroups which are saved in the MDL molfile as R#, are renamed according to their appearance,
  * e.g. the first R# is named R1. With PseudAtom.getLabel() "R1" is returned (instead of R#).
  * This is introduced due to the SAR table generation procedure of Scitegics PipelinePilot.  
  *
- * cdk.module io
- * cdk.svnrev  $Revision: 9684 $
+ * @cdk.module io
+ * @cdk.githash
  *
  * @author     steinbeck
  * @author     Egon Willighagen
- * cdk.created    2000-10-02
- * cdk.keyword    file format, MDL molfile
- * cdk.keyword    file format, SDF
- * cdk.bug        1587283
+ * @cdk.created    2000-10-02
+ * @cdk.keyword    file format, MDL molfile
+ * @cdk.keyword    file format, SDF
+ * @cdk.bug        1587283
  */
+@TestClass("org.openscience.cdk.io.MDLV2000ReaderTest")
 public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
-	
+
     BufferedReader input = null;
-    private LoggingTool logger = null;
+    private static ILoggingTool logger =
+        LoggingToolFactory.createLoggingTool(MDLV2000ReaderExtended.class);
 
     private BooleanIOSetting forceReadAs3DCoords;
+    private BooleanIOSetting interpretHydrogenIsotopes;
+
+    //Keep track of atoms and the lines they were on in the atom block.
+    private List<IAtom> atomsByLinePosition;
     
     public MDLV2000ReaderExtended() {
         this(new StringReader(""));
     }
     
 	/**
-	 *  Contructs a new MDLReader that can read Molecule from a given InputStream.
+	 *  Constructs a new MDLReader that can read Molecule from a given InputStream.
 	 *
 	 *@param  in  The InputStream to read from
 	 */
@@ -127,16 +137,17 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
         this(in, Mode.RELAXED);
 	}
 	public MDLV2000ReaderExtended(Reader in, Mode mode) {
-        logger = new LoggingTool(this);
         input = new BufferedReader(in);
         initIOSettings();
         super.mode = mode;
 	}
 
-	public IResourceFormat getFormat() {
+	@TestMethod("testGetFormat")
+    public IResourceFormat getFormat() {
         return MDLV2000Format.getInstance();
     }
 
+    @TestMethod("testSetReader_Reader")
     public void setReader(Reader input) throws CDKException {
         if (input instanceof BufferedReader) {
             this.input = (BufferedReader)input;
@@ -145,17 +156,21 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
         }
     }
 
+    @TestMethod("testSetReader_InputStream")
     public void setReader(InputStream input) throws CDKException {
         setReader(new InputStreamReader(input));
     }
 
-	public boolean accepts(Class classObject) {
-		Class[] interfaces = classObject.getInterfaces();
+	@TestMethod("testAccepts")
+    public boolean accepts(Class<? extends IChemObject> classObject) {
+		Class<?>[] interfaces = classObject.getInterfaces();
 		for (int i=0; i<interfaces.length; i++) {
 			if (IChemFile.class.equals(interfaces[i])) return true;
 			if (IChemModel.class.equals(interfaces[i])) return true;
 			if (IMolecule.class.equals(interfaces[i])) return true;
 		}
+    Class superClass = classObject.getSuperclass();
+    if (superClass != null) return this.accepts(superClass);
 		return false;
 	}
 
@@ -169,13 +184,13 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
 	 *@return                                     The IChemObject read
 	 *@exception  CDKException
 	 */
-	public IChemObject read(IChemObject object) throws CDKException {
+    public <T extends IChemObject> T read(T object) throws CDKException {
 		if (object instanceof IChemFile) {
-			return readChemFile((IChemFile)object);
+			return (T)readChemFile((IChemFile)object);
         } else if (object instanceof IChemModel) {
-            return readChemModel((IChemModel)object);
+            return (T)readChemModel((IChemModel)object);
 		} else if (object instanceof IMolecule) {
-			return readMolecule((IMolecule)object);
+			return (T)readMolecule((IMolecule)object);
 		} else {
 			throw new CDKException("Only supported are ChemFile and Molecule.");
 		}
@@ -252,15 +267,13 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
 							      );
 				}
 			    }
-			    // end skip all other lines
-			    while ((line = input.readLine()) != null && line.startsWith(">")) {
-                    logger.debug("data header line: ", line);
-			    }
 			}
             if (line == null) {
                 throw new CDKException("Expecting data line here, but found null!");
             }
-			String data = line;
+			StringBuilder data = new StringBuilder();
+			int dataLineCount = 0;
+			boolean lineIsContinued = false;
 			while ((line = input.readLine()) != null &&
 			       line.trim().length() > 0) {
                 if (line.equals("$$$$")) {
@@ -268,14 +281,24 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                 	break;
                 }
                 logger.debug("data line: ", line);
-			    data += line;
-			    // preserve newlines, unless the line is exactly 80 chars; in that case it
-			    // is assumed to continue on the next line. See MDL documentation.
-			    if (line.length() < 80) data += "\n";
+                lineIsContinued = false; // reset property
+                dataLineCount++;
+
+                // preserve newlines, unless the line is exactly 80 chars;
+                // in that case it is assumed to continue on the next line.
+                // See MDL documentation.
+                if (!lineIsContinued && dataLineCount > 1)
+                    data.append(System.getProperty("line.separator"));
+
+                // add the data line
+                data.append(line);
+
+                // check if the line will be continued on the next line
+			    if (line.length() == 80) lineIsContinued = true;
 			}
 			if (fieldName != null) {
 			    logger.info("fieldName, data: ", fieldName, ", ", data);
-			    m.setProperty(fieldName, data);
+			    m.setProperty(fieldName, data.toString());
 			}
 		    }
 		}
@@ -315,19 +338,22 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
         int atom1 = 0;
         int atom2 = 0;
         int order = 0;
-        int stereo = 0;
+        IBond.Stereo stereo = (IBond.Stereo)CDKConstants.UNSET;
         int RGroupCounter=1;
         int Rnumber=0;
         String [] rGroup=null;
         double x = 0.0;
         double y = 0.0;
         double z = 0.0;
+        double totalX = 0.0;
+        double totalY = 0.0;
         double totalZ = 0.0;
         //int[][] conMat = new int[0][0];
         //String help;
         IAtom atom;
         String line = "";
-        
+        //A map to keep track of R# atoms so that RGP line can be parsed
+        Map<Integer,IPseudoAtom> rAtoms = new HashMap<Integer,IPseudoAtom>();
         Hashtable<Integer,ISGroup> sgroups = null;
         try {
         	IsotopeFactory isotopeFactory = IsotopeFactory.getInstance(molecule.getBuilder());
@@ -357,26 +383,48 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
             logger.info("Reading rest of file");
             line = input.readLine(); linecount++;
             logger.debug("Line " + linecount + ": " + line);
-            if (mode == Mode.STRICT) {
-            	if (line.contains("V3000") || line.contains("v3000")) {
-            		throw new CDKException("This file must be read with the MDLV3000Reader.");
-            	} else if (!line.contains("V2000") && !line.contains("v2000")) {
-            		throw new CDKException("This file must be read with the MDLReader.");
-            	}
+
+            // if the line is empty we hav a problem - either a malformed
+            // molecule entry or just extra new lines at the end of the file
+            if (line.length() == 0) {
+                // read till the next $$$$ or EOF
+                while (true) {
+                    line = input.readLine(); linecount++;
+                    if (line == null) {
+                        return null;
+                    }
+                    if (line.startsWith("$$$$")) {
+                        return molecule; // an empty molecule
+                    }
+                }
             }
-            atoms = Integer.valueOf(line.substring(0,3).trim()).intValue();
+
+            // check the CT block version
+            if (line.contains("V3000") || line.contains("v3000")) {
+                handleError("This file must be read with the MDLV3000Reader.");
+            } else if (!line.contains("V2000") && !line.contains("v2000")) {
+                handleError("This file must be read with the MDLReader.");
+            }
+
+            atoms = Integer.parseInt(line.substring(0, 3).trim());
             logger.debug("Atomcount: " + atoms);
-            bonds = Integer.valueOf(line.substring(3,6).trim()).intValue();
+            bonds = Integer.parseInt(line.substring(3, 6).trim());
             logger.debug("Bondcount: " + bonds);
             
             // read ATOM block
             logger.info("Reading atom block");
+      	    atomsByLinePosition = new ArrayList<IAtom>();
+		        atomsByLinePosition.add(null); // 0 is not a valid position
+            int atomBlockLineNumber=0;
             for (int f = 0; f < atoms; f++) {
-                line = input.readLine(); linecount++;
-                x = new Double(line.substring( 0,10).trim()).doubleValue();
-                y = new Double(line.substring(10,20).trim()).doubleValue();
-                z = new Double(line.substring(20,30).trim()).doubleValue();
-                totalZ += Math.abs(z); // *all* values should be zero, not just the sum
+                line = input.readLine(); linecount++; atomBlockLineNumber++;
+                x = Double.parseDouble(line.substring(0, 10).trim());
+                y = Double.parseDouble(line.substring(10, 20).trim());
+                z = Double.parseDouble(line.substring(20, 30).trim());
+                // *all* values should be zero, not just the sum
+                totalX += Math.abs(x);
+                totalY += Math.abs(y);
+                totalZ += Math.abs(z);
                 logger.debug("Coordinates: " + x + "; " + y + "; " + z);
                 String element = line.substring(31,34).trim();
 
@@ -393,25 +441,35 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                 	atom = molecule.getBuilder().newPseudoAtom(element);
                 } else if ("L".equals(element)) {
                 	atom = molecule.getBuilder().newPseudoAtom(element);
-                } else if (element.length() > 0 && element.charAt(0) == 'R'){
-                	logger.debug("Atom ", element, " is not an regular element. Creating a PseudoAtom.");
+                } else if ( element.equals("R") || 
+                           (element.length() > 0 && element.charAt(0) == 'R')){
+                 	  logger.debug("Atom ", element, " is not an regular element. Creating a PseudoAtom.");
                     //check if the element is R
                     rGroup=element.split("^R");
+                    atom=null;
                     if (rGroup.length >1){
                     	try{
-                    		Rnumber=new Integer(rGroup[(rGroup.length-1)]).intValue();
+                    		Rnumber= Integer.valueOf(rGroup[(rGroup.length - 1)]);
                     		RGroupCounter=Rnumber;
+                  	    element="R"+Rnumber;
+                   	    atom = molecule.getBuilder().newPseudoAtom(element);
+
                     	}catch(Exception ex){
-                    		Rnumber=RGroupCounter;
-                    		RGroupCounter++;
+                        // This happens for atoms labeled "R#".
+                        // The Rnumber may be set later on, using RGP line
+                        atom = molecule.getBuilder().newPseudoAtom("R");
+                   	    rAtoms.put(atomBlockLineNumber,(IPseudoAtom)atom);
                     	}
-                    	element="R"+Rnumber;
                     }
-                    atom = molecule.getBuilder().newPseudoAtom(element);
+                    else {
+                        atom = molecule.getBuilder().newPseudoAtom("R");
+                    }
                 } else {
-                	if (mode == IChemObjectReader.Mode.STRICT) {
-                		throw new CDKException("Invalid element type. Must be an existing element, or one in: A, Q, L, LP, *.");
-                	}
+                    handleError(
+                        "Invalid element type. Must be an existing " +
+                        "element, or one in: A, Q, L, LP, *.",
+                        linecount, 32, 35
+                    );
                 	atom = molecule.getBuilder().newPseudoAtom(element);
                 }
 
@@ -426,15 +484,19 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                         int massDiff = Integer.parseInt(massDiffString);
                         if (massDiff != 0) {
                             IIsotope major = IsotopeFactory.getInstance(molecule.getBuilder()).getMajorIsotope(element);
-                            atom.setAtomicNumber(major.getAtomicNumber() + massDiff);
+                            atom.setMassNumber(major.getMassNumber() + massDiff);
                         }
                     } catch (Exception exception) {
-                        logger.error("Could not parse mass difference field");
+                        handleError(
+                            "Could not parse mass difference field.",
+                            linecount, 35, 37,
+                            exception
+                        );
                     }
                 } else {
                     logger.error("Cannot set mass difference for a non-element!");
                 }
-                
+               
                 
                 String chargeCodeString = line.substring(36,39).trim();
                 logger.debug("Atom charge code: ", chargeCodeString);
@@ -477,25 +539,33 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                 //shk3: This reads shifts from after the molecule. I don't think this is an official format, but I saw it frequently 80=>78 for alk
                 if(line.length()>=78){
                 	double shift=Double.parseDouble(line.substring(69,80).trim());
-                	atom.setProperty("first shift",new Double(shift));
+                	atom.setProperty("first shift", shift);
                 }
                 if(line.length()>=87){
                 	double shift=Double.parseDouble(line.substring(79,87).trim());
-                	atom.setProperty("second shift",new Double(shift));
+                	atom.setProperty("second shift", shift);
                 }
                 
                 molecule.addAtom(atom);
+                atomsByLinePosition.add(atom);
             }
             
             // convert to 2D, if totalZ == 0
-            if (totalZ == 0.0 && !forceReadAs3DCoords.isSet()) {
-                logger.info("Total 3D Z is 0.0, interpreting it as a 2D structure");
-                java.util.Iterator atomsToUpdate = molecule.atoms();
-                while (atomsToUpdate.hasNext()) {
-                    IAtom atomToUpdate = (IAtom)atomsToUpdate.next();
-                    Point3d p3d = atomToUpdate.getPoint3d();
-                    atomToUpdate.setPoint2d(new Point2d(p3d.x, p3d.y));
+            if (totalX == 0.0 && totalY == 0.0 && totalZ == 0.0) {
+                logger.info("All coordinates are 0.0");
+                for (IAtom atomToUpdate : molecule.atoms()) {
                     atomToUpdate.setPoint3d(null);
+                }
+            } else if (totalZ == 0.0 && !forceReadAs3DCoords.isSet()) {
+                logger.info("Total 3D Z is 0.0, interpreting it as a 2D structure");
+                Iterator<IAtom> atomsToUpdate = molecule.atoms().iterator();
+                while (atomsToUpdate.hasNext()) {
+                    IAtom atomToUpdate = atomsToUpdate.next();
+                    Point3d p3d = atomToUpdate.getPoint3d();
+                    if (p3d != null) {
+                        atomToUpdate.setPoint2d(new Point2d(p3d.x, p3d.y));
+                        atomToUpdate.setPoint3d(null);
+                    }
                 }
             }
             
@@ -503,30 +573,42 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
             logger.info("Reading bond block");
             for (int f = 0; f < bonds; f++) {
                 line = input.readLine(); linecount++;
-                atom1 = java.lang.Integer.valueOf(line.substring(0,3).trim()).intValue();
-                atom2 = java.lang.Integer.valueOf(line.substring(3,6).trim()).intValue();
-                order = java.lang.Integer.valueOf(line.substring(6,9).trim()).intValue();
+                atom1 = Integer.parseInt(line.substring(0, 3).trim());
+                atom2 = Integer.parseInt(line.substring(3, 6).trim());
+                order = Integer.parseInt(line.substring(6, 9).trim());
                 if (line.length() >= 12) {
-                	if (line.length() > 12) {
-                		stereo = java.lang.Integer.valueOf(line.substring(9,12).trim()).intValue();
-                	} else {
-                		stereo = java.lang.Integer.valueOf(line.substring(9).trim()).intValue();
-                	}
+                	int mdlStereo = line.length() > 12
+                		? Integer.parseInt(line.substring(9, 12).trim())
+                		: Integer.parseInt(line.substring(9).trim());
+                    if (mdlStereo == 1) {
+                        // MDL up bond
+                        stereo = IBond.Stereo.UP;
+                    } else if (mdlStereo == 6) {
+                        // MDL down bond
+                        stereo = IBond.Stereo.DOWN;
+                    } else if (mdlStereo == 0) {
+                    	if (order == 2) {
+                    		// double bond stereo defined by coordinates
+                    		stereo = IBond.Stereo.E_Z_BY_COORDINATES;
+                    	} else {
+                    		// bond has no stereochemistry
+                    		stereo = IBond.Stereo.NONE;
+                    	}
+                    } else if (mdlStereo == 3 && order == 2) {
+                        // unknown E/Z stereochemistry
+                        stereo = IBond.Stereo.E_OR_Z;
+                    } else if (mdlStereo == 4) {
+                        //MDL bond undefined
+                        stereo = (IBond.Stereo)CDKConstants.UNSET;
+                    }
                 } else {
-                	logger.warn("Missing expected stereo field at line: " + line);
+                	handleError(
+                	    "Missing expected stereo field at line: ",
+                	    linecount, 10, 12
+                	);
                 }
                 if (logger.isDebugEnabled()) {
                     logger.debug("Bond: " + atom1 + " - " + atom2 + "; order " + order);
-                }
-                if (stereo == 1) {
-                    // MDL up bond
-                    stereo = CDKConstants.STEREO_BOND_UP;
-                } else if (stereo == 6) {
-                    // MDL down bond
-                    stereo = CDKConstants.STEREO_BOND_DOWN;
-                } else if (stereo == 4) {
-                    //MDL bond undefined
-                    stereo = CDKConstants.STEREO_BOND_UNDEFINED;
                 }
                 // interpret CTfile's special bond orders
                 IAtom a1 = molecule.getAtom(atom1 - 1);
@@ -546,6 +628,12 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                     a1.setFlag(CDKConstants.ISAROMATIC, true);
                     a2.setFlag(CDKConstants.ISAROMATIC, true);
                 }
+                else {
+                    throw new CDKException 
+                        ("Detected 'query bond type ' (value="+order +")."+
+                         " Could not create regular molecule.");
+                }
+
                 molecule.addBond(newBond);
             }
             
@@ -554,11 +642,13 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
             while (true) {
                 line = input.readLine(); linecount++;
                 if (line == null) {
-                	break;
-                    //throw new CDKException("The expected property block is missing!"); property block is not mandatory
+                    handleError(
+                        "The expected property block is missing!",
+                        linecount, 0, 0
+                    );
                 }
 		if (line.startsWith("M  END")) break;
-		if (line.trim().equals("")) continue;
+                
                 boolean lineRead = false;
                 if (line.startsWith("M  CHG")) {
                     // FIXME: if this is encountered for the first time, all
@@ -593,10 +683,10 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
 						newPseudoAtom.setPoint3d(aliasAtom.getPoint3d());
 					}
 					molecule.addAtom(newPseudoAtom);
-					java.util.List bondsOfAliasAtom = molecule.getConnectedBondsList(aliasAtom);
+					List<IBond> bondsOfAliasAtom = molecule.getConnectedBondsList(aliasAtom);
 					
 					for (int i = 0; i < bondsOfAliasAtom.size(); i++) {
-						IBond bondOfAliasAtom = (IBond) bondsOfAliasAtom.get(i);
+						IBond bondOfAliasAtom = bondsOfAliasAtom.get(i);
 						IAtom connectedToAliasAtom = bondOfAliasAtom.getConnectedAtom(aliasAtom);
 						IBond newBond = bondOfAliasAtom.getBuilder().newBond(); 
 						newBond.setAtoms(new IAtom[] {connectedToAliasAtom, newPseudoAtom});
@@ -609,9 +699,9 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
 
                 } else if (line.startsWith("M  ISO")) {
                     try {
-                        String countString = line.substring(6,9).trim();
+                        String countString = line.substring(6,10).trim();
                         int infoCount = Integer.parseInt(countString);
-                        StringTokenizer st = new StringTokenizer(line.substring(9));
+                        StringTokenizer st = new StringTokenizer(line.substring(10));
                         for (int i=1; i <= infoCount; i++) {
                             int atomNumber = Integer.parseInt(st.nextToken().trim());
                             int absMass = Integer.parseInt(st.nextToken().trim());
@@ -624,7 +714,11 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                         String error = "Error (" + exception.getMessage() + ") while parsing line "
                                        + linecount + ": " + line + " in property block.";
                         logger.error(error);
-                        throw new CDKException("NumberFormatException in isotope information on line: " + line, exception);
+                        handleError(
+                            "NumberFormatException in isotope information.",
+                            linecount, 7, 11,
+                            exception
+                        );
                     }
                 } else if (line.startsWith("M  RAD")) {
                     try {
@@ -647,7 +741,11 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                         String error = "Error (" + exception.getMessage() + ") while parsing line "
                                        + linecount + ": " + line + " in property block.";
                         logger.error(error);
-                        throw new CDKException("NumberFormatException in radical information on line: " + line, exception);
+                        handleError(
+                            "NumberFormatException in radical information",
+                            linecount, 7, 10,
+                            exception
+                        );
                     }
                 } else if (line.startsWith("G  ")) {
                     try {
@@ -671,10 +769,29 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                         String error = "Error (" + exception.toString() + ") while parsing line "
                         + linecount + ": " + line + " in property block.";
                         logger.error(error);
-                        throw new CDKException("NumberFormatException in group information on line: " + line, exception);
+                        handleError(
+                            "NumberFormatException in group information",
+                            linecount, 4, 7,
+                            exception
+                        );
                     }
-                } else {
-                	try {
+                    /*
+                } else if (line.startsWith("M  RGP")) {
+                    StringTokenizer st = new StringTokenizer(line);
+                    //Ignore first 3 tokens (overhead).
+                    st.nextToken(); st.nextToken(); st.nextToken();
+                    //Process the R group numbers as defined in RGP line.
+                    while (st.hasMoreTokens()) {
+                        Integer position = new Integer(st.nextToken());
+                        Rnumber = new Integer(st.nextToken());
+                        IPseudoAtom pseudoAtom = rAtoms.get(position);
+                        if (pseudoAtom!=null)  {
+                            pseudoAtom.setLabel("R"+Rnumber);
+                        }
+                    }
+                    */
+                } else
+               	try {
                     	SGroupMDL2000Helper.SGROUP_LINE type =  SGroupMDL2000Helper.getValue(line);
                         if (! (molecule instanceof SuppleAtomContainer)) {
                             SuppleAtomContainer sca = new SuppleAtomContainer();
@@ -701,7 +818,6 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
                         else
                         	logger.warn(notdefined.getMessage());
                 	}
-                }
                 if (!lineRead) {
                     logger.warn("Skipping line in property block: ", line);
                 }
@@ -712,19 +828,50 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
             logger.debug(exception);
             throw exception;
 		} catch (Exception exception) {
+			exception.printStackTrace();
             String error = "Error while parsing line " + linecount + ": " + line + " -> " + exception.getMessage();
             logger.error(error);
             logger.debug(exception);
-            throw new CDKException(error, exception);
+            handleError(
+                "Error while parsing line: " + line,
+                linecount, 0, 0,
+                exception
+            );
+		}
+		if (interpretHydrogenIsotopes.isSet()) {
+			fixHydrogenIsotopes(molecule);
 		}
         if (sgroups != null) {
             Iterator<ISGroup> i = sgroups.values().iterator();
             while (i.hasNext()) 
                 molecule.addAtom(i.next());
-        }
+        }		
 		return molecule;
 	}
     
+    private void fixHydrogenIsotopes(IMolecule molecule) {
+		Iterator<IAtom> atoms = molecule.atoms().iterator();
+		while (atoms.hasNext()) {
+			IAtom atom = atoms.next();
+			if (atom instanceof IPseudoAtom) {
+				IPseudoAtom pseudo = (IPseudoAtom)atom;
+                Integer massNumber = atom.getMassNumber();
+                if ("D".equals(pseudo.getLabel()) &&
+				        massNumber != null && massNumber == 2) {
+					IAtom newAtom = molecule.getBuilder().newAtom(atom);
+					newAtom.setSymbol("H");
+					AtomContainerManipulator.replaceAtomByAtom(molecule, atom, newAtom);
+				} else if ("T".equals(pseudo.getLabel()) &&
+				        massNumber != null && massNumber == 3) {
+					IAtom newAtom = molecule.getBuilder().newAtom(atom);
+					newAtom.setSymbol("H");
+					AtomContainerManipulator.replaceAtomByAtom(molecule, atom, newAtom);
+				}
+			}
+		}
+	}
+
+    @TestMethod("testClose")
     public void close() throws IOException {
         input.close();
     }
@@ -732,17 +879,26 @@ public class MDLV2000ReaderExtended extends DefaultChemObjectReader {
     private void initIOSettings() {
         forceReadAs3DCoords = new BooleanIOSetting("ForceReadAs3DCoordinates", IOSetting.LOW,
           "Should coordinates always be read as 3D?", 
+          "false");
+        interpretHydrogenIsotopes = new BooleanIOSetting("InterpretHydrogenIsotopes", IOSetting.LOW,
+          "Should D and T be interpreted as hydrogen isotopes?",
           "true");
     }
     
     public void customizeJob() {
         fireIOSettingQuestion(forceReadAs3DCoords);
+        fireIOSettingQuestion(interpretHydrogenIsotopes);
     }
 
     public IOSetting[] getIOSettings() {
-        IOSetting[] settings = new IOSetting[1];
+        IOSetting[] settings = new IOSetting[2];
         settings[0] = forceReadAs3DCoords;
+        settings[1] = interpretHydrogenIsotopes;
         return settings;
+    }
+
+    public List<IAtom> getAtomsByLinePosition() {
+        return atomsByLinePosition;
     }
 }
 
